<resources>
    <string name="app_name">Coffee</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="main">Почувствуй себя бариста!</string>
    <string name="btmmain">Любой кофе под ваш заказ</string>
    <string name="text">Coffee break</string>
    <string name="enter">Войти</string>
    <string name="emailedt">Адрес электронной почты </string>
    <string name="welcone">Добро пожаловать</string>
    <string name="forgotpass">Забыли пароль?</string>
    <string name="loginusing">Войти с помощью</string>
    <string name="reg">Зарегистрироваться.</string>
    <string name="firsttime">Впервые?</string>
    <string name="createaccount">Создать аккаунт здесь</string>
    <string name="phonenum">Номер мобильного телефона</string>
    <string name="name">Имя пользователя</string>
    <string name="regtext">Регистрируясь, вы соглашаетесь с нашими условиями использования</string>


</resources>