<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationFragment">

<Button
    android:id="@+id/btnback"
    android:layout_width="24dp"
    android:layout_height="24dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginStart="26dp"
    android:layout_marginTop="57dp"
    android:background="@drawable/arrow_left"
    />
    <TextView
        android:id="@+id/textreg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg"
        app:layout_constraintStart_toStartOf="@id/btnback"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/btnback"
        android:layout_marginTop="46dp"
        android:textColor="#181D2D"
        android:textSize="22sp"

        />

    <TextView
        android:id="@+id/createacctext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/createaccount"
        app:layout_constraintStart_toStartOf="@id/textreg"
        app:layout_constraintTop_toBottomOf="@id/textreg" />


    <EditText
        android:id="@+id/edtname"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createacctext"
        app:layout_constraintTop_toTopOf="@id/createacctext" />

    <ImageView
        android:id="@+id/iconname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/profile"

        app:layout_constraintBottom_toBottomOf="@+id/edtname"
        app:layout_constraintEnd_toStartOf="@+id/edtname"
        app:layout_constraintTop_toTopOf="@+id/edtname" />

    <EditText
        android:id="@+id/edtphone"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:hint="@string/phonenum"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/edtname"
        app:layout_constraintStart_toStartOf="@id/edtname"
        app:layout_constraintTop_toBottomOf="@id/edtname" />

    <ImageView
        android:id="@+id/phoneicon"
        android:layout_width="18dp"
        android:layout_height="21dp"
        android:src="@drawable/smartphone"
        app:layout_constraintBottom_toBottomOf="@+id/edtphone"
        app:layout_constraintEnd_toStartOf="@+id/edtphone"
        app:layout_constraintTop_toTopOf="@+id/edtphone" />

    <EditText
            android:id="@+id/edtemail"
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:hint="@string/emailedt"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/edtphone"
            app:layout_constraintStart_toStartOf="@id/edtphone"
            app:layout_constraintEnd_toEndOf="@id/edtphone"
            />


    <ImageView
        android:id="@+id/iconemail"
        android:layout_width="16dp"
        android:layout_height="15dp"
        android:src="@drawable/message"
        app:layout_constraintBottom_toBottomOf="@+id/edtemail"
        app:layout_constraintEnd_toStartOf="@+id/edtemail"
        app:layout_constraintTop_toTopOf="@+id/edtemail" />

    <EditText
        android:id="@+id/edtpass"
        android:layout_width="293dp"
        android:layout_height="36dp"
        android:layout_marginTop="36dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edtemail"
        app:layout_constraintStart_toStartOf="@+id/edtemail"
        app:layout_constraintTop_toBottomOf="@id/edtemail" />

    <ImageView
        android:id="@+id/iconlock"
        android:layout_width="16dp"
        android:layout_height="18dp"
        android:src="@drawable/Lock"
        app:layout_constraintBottom_toBottomOf="@+id/edtpass"
        app:layout_constraintEnd_toStartOf="@+id/edtpass"
        app:layout_constraintTop_toTopOf="@+id/edtpass"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:foregroundGravity="left"
        android:text="@string/regtext"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/edtpass"
        app:layout_constraintStart_toStartOf="@+id/iconlock"
        app:layout_constraintTop_toBottomOf="@+id/edtpass" />


</androidx.constraintlayout.widget.ConstraintLayout>